fdo#49580: Fix bean after gbuild'ification

4478b739ddade09425d496cbddee1542fdfd5e9b "convert bean to gbuild and add to
tail_build" broke the following:
* The name of the officebean dynamic library must not be changed (by adding the
  "lo" extension), as code in officebean.jar uses it in NativeLibraryLoader.
* With gbuild's per-default hidden visibility, JNIEXPORT functions must instead
  use SAL_DLLPUBLIC_EXPORT.  (Windows-only code in bean/native/win32/ should be
  safe to continue using JNIEXPORT.)

Change-Id: I I3c312dd05c90421ba0c726496b7149a26d155604
(cherry picked from commit 708229dc96533b6f165b82ce4d9e07537d1ce8b1)

Conflicts:

	Repository.mk