Repository.mk
@@ -114,7 +114,6 @@ $(eval $(call gb_Helper_register_libraries,OOOLIBS, \
 	forui \
 	odbc \
 	odbcbase \
-	officebean \
 	oox \
 	ooxml \
 	sdbc \
@@ -276,6 +275,7 @@ $(eval $(call gb_Helper_register_libraries,PLAINLIBS_OOO, \
 	localedata_euro \
 	localedata_others \
 	mcnttype \
+	officebean \
 	neon \
 	package2 \
     reg \
